--- a/style.css
+++ b/style.css
@@ -43,3 +43,17 @@ table {
     color: var(--primary-color);
     margin: 1em;
 }
+
+.mobile-table {
+    display: none;
+}
+
+@media only screen and (max-width:768px) {
+    .table {
+        display: none;
+    }
+
+    .mobile-table {
+        display: block;
+    }
+}
